[package]
name = "libro_commerce"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = "0.3"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres"] }
serde = { vrsion = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "8"
argon2 = "0.3"
dotenv = "0.15"
